--- a/cineschedule.cabal
+++ b/cineschedule.cabal
@@ -1,4 +1,4 @@
-cabal-version:       >= 1.10
+cabal-version:       >= 2.0
 
 name:                cineschedule
 version:             0.1.0.0
@@ -12,10 +12,10 @@ executable cineschedule
   main-is:           cineschedule.hs
   other-modules:     Parser
   default-language:  Haskell2010
-  build-depends:     base >= 4.14 && < 4.15,
-                     attoparsec,
-                     text,
-                     directory,
-                     process,
-                     haskeline,
-                     time
+  build-depends:     base       ^>= 4.14,
+                     time       ^>= 1.9,
+                     text       ^>= 1.2,
+                     attoparsec ^>= 0.13,
+                     directory  ^>= 1.3,
+                     process    ^>= 1.6,
+                     haskeline  ^>= 0.8
