--- a/cineschedule.cabal
+++ b/cineschedule.cabal
@@ -1,4 +1,4 @@
-cabal-version:       >= 2.0
+cabal-version:       2.0
 
 name:                cineschedule
 version:             0.1.0.0
@@ -11,11 +11,11 @@ extra-source-files:  README.md
 executable cineschedule
   main-is:           cineschedule.hs
   other-modules:     Parser
-  default-language:  Haskell2010
-  build-depends:     base       ^>= 4.14,
-                     time       ^>= 1.9,
-                     text       ^>= 1.2,
-                     attoparsec ^>= 0.13,
+  default-language:  GHC2021
+  build-depends:     base       ^>= 4.16,
+                     time       ^>= 1.12,
+                     text       ^>= 2.0,
+                     attoparsec ^>= 0.14,
                      directory  ^>= 1.3,
                      process    ^>= 1.6,
                      haskeline  ^>= 0.8
